deploy/k8s/go-deployment.yaml
apiVersion: apps/v1.3
kind: Deployment
metadata: # Deployment的元数据
  name: go-deployment
  labels:
    app: gin-app
spec:
  replicas: 3 # ReplicaSet部分的定义
  selector:
    matchLabels:
      app: gin-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template: # Pod 模板的定义
    metadata:
      labels:
        app: gin-app
    spec: # Pod里容器相关的定义
      containers:
        - name: app-container
          image: jonnymark/jonny-gin:v1.3
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m" # 0.1核，1000m = 1核心
          ports:
            - containerPort: 801
            - containerPort: 901
          readinessProbe:
            exec:
              command: [ "/bin/grpc_health_probe", "-addr=:901" ]
            initialDelaySeconds: 5
          livenessProbe:
            exec:
              command: [ "/bin/grpc_health_probe", "-addr=:901" ]
            initialDelaySeconds: 10
