deploy/k8s/go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awesome-project-svc
  labels:
    app: awesome-project
spec:
  ports:
    - port: 9001
      nodePort: 31080
      targetPort: 801
  type: ClusterIP
  selector:
    app: awesome-project
